// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render empty 1`] = `
<div
  className="Header__HeaderWrapper-x4ek9t-0 kndkLQ"
>
  <div
    data-mock="Container"
  >
    {}
    <div
      className="Header__HeaderContainer-x4ek9t-1 dcVYvD"
    >
      <div
        className="Header__HeaderItem-x4ek9t-2 uMxjY"
      >
        <div
          data-mock="Link"
        >
          {
  "to": "/",
  "className": "Header__HeaderLogoLink-x4ek9t-5 gpqiWd"
}
          
        </div>
      </div>
      <div
        className="Header__HeaderItem-x4ek9t-2 lancbj"
      >
        <div
          className="Header__HeaderItemMenu-x4ek9t-3 jmGRuE"
        >
          <div
            data-mock="MainMenu"
          >
            {
  "location": {}
}
          </div>
        </div>
      </div>
    </div>
    <div
      className="Header__HeaderSeparator-x4ek9t-4 eXGQby"
    />
    <div
      data-mock="UpdateReadyInfo"
    >
      {}
    </div>
  </div>
</div>
`;

exports[`Header should render with title 1`] = `
<div
  className="Header__HeaderWrapper-x4ek9t-0 kndkLQ"
>
  <div
    data-mock="Container"
  >
    {}
    <div
      className="Header__HeaderContainer-x4ek9t-1 dcVYvD"
    >
      <div
        className="Header__HeaderItem-x4ek9t-2 uMxjY"
      >
        <div
          data-mock="Link"
        >
          {
  "to": "/",
  "className": "Header__HeaderLogoLink-x4ek9t-5 gpqiWd"
}
          Test title
        </div>
      </div>
      <div
        className="Header__HeaderItem-x4ek9t-2 lancbj"
      >
        <div
          className="Header__HeaderItemMenu-x4ek9t-3 jmGRuE"
        >
          <div
            data-mock="MainMenu"
          >
            {
  "location": {}
}
          </div>
        </div>
      </div>
    </div>
    <div
      className="Header__HeaderSeparator-x4ek9t-4 eXGQby"
    />
    <div
      data-mock="UpdateReadyInfo"
    >
      {}
    </div>
  </div>
</div>
`;
